# SnakeGame

./: .gitignore  CMakeLists.txt  README.md  build.bat
Game/: CMakeLists.txt
Game/src/: Game.cpp  Game.h  Grid.cpp  Grid.h  main.cpp
